Fix: Mobile: Fix contents' overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,12 @@ a {
   position: relative;
 }
 
+@media (--mobile) {
+  .container {
+    height: auto;
+  }
+}
+
 .heading {
   background-color: #fff;
   color: #000;
